fix: add tool buttons to drawFragment

--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -98,8 +98,8 @@
                 android:layout_height="0dp"
                 android:layout_margin="8dp"
                 android:focusableInTouchMode="true"
-                app:layout_constraintBottom_toBottomOf="@+id/guide_draw_drawview_bottom"
-                app:layout_constraintEnd_toStartOf="@+id/container_draw_images"
+                app:layout_constraintBottom_toTopOf="@+id/tabs_drawing_templates"
+                app:layout_constraintEnd_toStartOf="@+id/btn_makeDrawing_save"
                 app:layout_constraintStart_toEndOf="@+id/guide_draw_drawview_left"
                 app:layout_constraintTop_toTopOf="@+id/guide_draw_drawview_top" />
 
@@ -115,16 +115,6 @@
                 android:onClick="@{() -> drawViewModel.onSaveButtonClicked()}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <include
-                android:id="@+id/container_draw_images"
-                layout="@layout/panel_drawing_images"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_margin="8dp"
-                app:layout_constraintBottom_toBottomOf="@+id/guide_draw_drawview_bottom"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guide_draw_drawview_top" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_draw_drawview_left"
@@ -146,6 +136,48 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.93" />
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabs_drawing_templates"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                app:layout_constraintBottom_toTopOf="@+id/recyclerView_drawing_templates"
+                app:layout_constraintEnd_toEndOf="@+id/recyclerView_drawing_templates"
+                app:layout_constraintStart_toStartOf="@+id/recyclerView_drawing_templates">
+
+                <com.google.android.material.tabs.TabItem
+                    android:id="@+id/tab_drawing_people"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Personen" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:id="@+id/tab_drawing_attributes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Attributen" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:id="@+id/tab_drawing_decor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Decors" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:id="@+id/tab_drawing_metaphors"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Metaforen" />
+            </com.google.android.material.tabs.TabLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView_drawing_templates"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btn_makeDrawing_save"
+                app:layout_constraintStart_toStartOf="@+id/drawView" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
