--- a/app/src/main/res/layout/view_loginarrows.xml
+++ b/app/src/main/res/layout/view_loginarrows.xml
@@ -11,26 +11,19 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/linearLayout3"
+        android:id="@+id/loginview_layout_arrows"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.63" />
 
         <ImageView
             android:id="@+id/pole"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/guideline8"
+            app:layout_constraintEnd_toStartOf="@+id/guideline3"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline8"
+            app:layout_constraintStart_toStartOf="@+id/guideline3"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/paal" />
@@ -38,41 +31,43 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_register"
             style="@style/arrow_style.toRight"
+            android:layout_marginStart="24dp"
             android:onClick="@{() -> welcomeViewModel.registerButtonClicked()}"
+
             android:text="@string/msg_registreer"
             app:icon="@drawable/icoon_stad"
-
-            app:layout_constraintStart_toStartOf="@+id/guide_right_pole"
+            app:layout_constraintStart_toStartOf="@+id/guideline8"
             app:layout_constraintTop_toTopOf="@+id/guide_top_pole" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_city_startNewEvent"
             style="@style/arrow_style.toLeft"
+            android:layout_marginEnd="24dp"
             android:onClick="@{() -> welcomeViewModel.loginButtonClicked()}"
             android:text="@string/msg_naar_de_stad"
             app:icon="@drawable/icoon_stad"
-            app:layout_constraintEnd_toStartOf="@+id/guide_left_pole"
+            app:layout_constraintEnd_toStartOf="@+id/guideline8"
             app:layout_constraintTop_toTopOf="@+id/guide_top_pole" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_left_pole"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.45" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_right_pole"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.58" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_top_pole"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.15234375" />
+            app:layout_constraintGuide_percent="0.16" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.41" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
