--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,7 +38,7 @@
     <style name="AppTheme.PopupOverlay" parent="Theme.MaterialComponents.Light" />
 
     <style name="arrow_style.toLeft" parent="Widget.MaterialComponents.Button.Icon">
-        <item name="android:layout_width">@dimen/arrow_width</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">@dimen/arrow_height</item>
         <item name="android:textColor">@color/color_black</item>
         <item name="android:backgroundTint">@color/color_white</item>
@@ -48,7 +48,7 @@
     </style>
 
     <style name="arrow_style.toRight" parent="arrow_style.toLeft">
-        <item name="android:layout_width">@dimen/arrow_width</item>
+        <item name="android:layout_width">200dp</item>
         <item name="android:layout_height">@dimen/arrow_height</item>
         <item name="android:textColor">@color/color_black</item>
         <item name="iconGravity">start</item>
