--- a/app/src/main/res/layout/view_login_circle.xml
+++ b/app/src/main/res/layout/view_login_circle.xml
@@ -7,46 +7,46 @@
             type="be.hogent.faith.faith.loginOrRegister.WelcomeViewModel" />
     </data>
 
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/circle_shape"
-    android:gravity="center"
-    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:background="@drawable/cirkel_paneel"
+        android:gravity="center"
+        android:orientation="vertical">
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout_username"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/username">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txt_welcome_userName"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayout_username"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_login_wrap"
-            android:text="@={welcomeViewModel.userName}" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:hint="@string/username">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txt_welcome_userName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_login_wrap"
+                android:text="@={welcomeViewModel.userName}" />
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout_pwd"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/password">
-
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txt_welcome_password"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayout_pwd"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_lock_wrap"
-            android:inputType="textPassword"
-            android:text="@={welcomeViewModel.password}" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:hint="@string/password">
 
-</LinearLayout>
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txt_welcome_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_lock_wrap"
+                android:inputType="textPassword"
+                android:text="@={welcomeViewModel.password}" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </LinearLayout>
 </layout>
