--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -46,11 +47,11 @@
                 the device.-->
 
             <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guide_login_avatars_top"
+                android:id="@+id/guide_login_arrows_top"
                 android:layout_width="1dp"
                 android:layout_height="1dp"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.5" />
+                app:layout_constraintGuide_percent="0.47" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline7"
@@ -72,10 +73,10 @@
                 layout="@layout/view_login_circle"
                 android:layout_width="300dp"
                 android:layout_height="300dp"
-                app:layout_constraintBottom_toTopOf="@+id/guide_login_avatars_top"
+                app:layout_constraintBottom_toTopOf="@+id/guide_login_center_circle"
                 app:layout_constraintEnd_toStartOf="@+id/guideline7"
                 app:layout_constraintStart_toStartOf="@+id/guideline7"
-                app:layout_constraintTop_toTopOf="@+id/guide_horiz_circle"
+                app:layout_constraintTop_toTopOf="@+id/guide_login_center_circle"
                 app:welcomeViewModel="@{welcomeViewModel}" />
 
             <com.google.android.material.button.MaterialButton
@@ -86,7 +87,7 @@
                 android:text="@string/msg_registreer"
                 app:icon="@drawable/icoon_stad"
                 app:layout_constraintStart_toStartOf="@+id/guideline10"
-                app:layout_constraintTop_toTopOf="@+id/guide_login_avatars_top" />
+                app:layout_constraintTop_toTopOf="@+id/guide_login_arrows_top" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_city_startNewEvent"
@@ -95,7 +96,7 @@
                 android:text="@string/msg_naar_de_stad"
                 app:icon="@drawable/icoon_stad"
                 app:layout_constraintEnd_toStartOf="@+id/guideline9"
-                app:layout_constraintTop_toTopOf="@+id/guide_login_avatars_top" />
+                app:layout_constraintTop_toTopOf="@+id/guide_login_arrows_top" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline9"
@@ -119,11 +120,21 @@
                 app:layout_constraintGuide_begin="277dp" />
 
             <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline11"
+                android:id="@+id/guide_login_center_circle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.60444444" />
+                app:layout_constraintGuide_percent="0.54" />
+
+            <ImageView
+                android:id="@+id/fragment_login_avatars"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guide_form_start"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guide_login_arrows_top"
+                app:srcCompat="@drawable/login_avatars" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
