--- a/app/src/main/res/layout-w600dp/fragment_eventoverview.xml
+++ b/app/src/main/res/layout-w600dp/fragment_eventoverview.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/screen_overview_events"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="24dp">
