--- a/app/src/main/res/layout/dialog_save_event.xml
+++ b/app/src/main/res/layout/dialog_save_event.xml
@@ -119,11 +119,11 @@
                 android:hint="titel"
                 android:singleLine="true"
                 android:text="@={eventViewModel.eventTitle}"
-                app:errorMessageResId="@{userViewModel.titleErrorMessage}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                app:errorMessageResId="@{userViewModel.titleErrorMessage}"
                 app:layout_constraintBottom_toTopOf="@+id/guide_title_bottom"
                 app:layout_constraintEnd_toStartOf="@+id/guide_form_end"
-                app:layout_constraintStart_toStartOf="@+id/guide_form_start"
+                app:layout_constraintStart_toStartOf="@+id/guide_avatars_end"
                 tools:text="Titel van event" />
 
 
@@ -139,8 +139,8 @@
                 android:text="@{eventViewModel.eventDateString}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 app:layout_constraintBottom_toTopOf="@+id/guide_date_bottom"
-                app:layout_constraintEnd_toStartOf="@+id/guide_form_end"
-                app:layout_constraintStart_toStartOf="@+id/guide_form_start"
+                app:layout_constraintEnd_toStartOf="@+id/guide_save_start"
+                app:layout_constraintStart_toStartOf="@+id/guide_avatars_end"
                 tools:text="@tools:sample/date/ddmmyy" />
 
             <EditText
@@ -155,7 +155,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 app:layout_constraintBottom_toTopOf="@+id/guide_notes_bottom"
                 app:layout_constraintEnd_toStartOf="@+id/guide_form_end"
-                app:layout_constraintStart_toStartOf="@+id/guide_form_start"
+                app:layout_constraintStart_toStartOf="@+id/guide_avatars_end"
                 app:layout_constraintTop_toBottomOf="@+id/guide_date_bottom"
                 tools:text="@tools:sample/lorem/random" />
 
